--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "clas2hproyecto6backendapi",
+  "name": "project8apirestfiles",
+,
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
